argocd/argocd-service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-service
  namespace: argo-cd
spec:
  type: NodePort  # LoadBalancer, NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argo-cd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-cd-service
            port:
              number: 8080
    host: argocd.localhost
